--- a/app/src/main/res/layout/fragment_all_menus.xml
+++ b/app/src/main/res/layout/fragment_all_menus.xml
@@ -52,7 +52,7 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvUser"
+        android:id="@+id/rvMenu"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/btnAddMenu"
