--- a/app/src/main/res/layout/fragment_restaurant_detail.xml
+++ b/app/src/main/res/layout/fragment_restaurant_detail.xml
@@ -12,7 +12,7 @@
         android:id="@+id/btnUpdate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/lytInfo"
+        android:layout_alignParentBottom="true"
         android:layout_marginStart="15dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="15dp"
