--- a/app/src/main/res/layout/fragment_restaurant_profile.xml
+++ b/app/src/main/res/layout/fragment_restaurant_profile.xml
@@ -8,12 +8,30 @@
     tools:context=".fragment.dashboard.resto.RestaurantProfileFragment">
 
 
+    <Button
+        android:id="@+id/btnReview"
+        android:drawableLeft="@drawable/ic_baseline_star_24"
+        android:drawableTint="@color/yellow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
+        android:text="Review" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvReview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_above="@id/btnReview"
         android:layout_below="@id/tvReview"
-        android:layout_margin="15dp" />
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp" />
 
     <TextView
         android:id="@+id/tvReview"
@@ -22,7 +40,8 @@
         android:layout_below="@id/lytInfo"
         android:layout_centerHorizontal="true"
         android:text="Review"
-        android:textSize="@dimen/heading_2" />
+        android:textSize="@dimen/heading_2"
+        android:textStyle="bold" />
 
     <ImageView
         android:id="@+id/ivBanner"
@@ -56,6 +75,7 @@
             android:id="@+id/btnAllMenu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/grey"
             android:text="All Menu" />
 
         <LinearLayout
@@ -67,25 +87,30 @@
                 android:id="@+id/ivCall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
+                android:layout_marginRight="5dp"
                 android:layout_weight="1"
-                android:src="@drawable/ic_baseline_backup_24" />
+                android:backgroundTint="@color/red_rusty"
+                android:src="@drawable/ic_baseline_call_24"
+                android:tint="@color/white" />
 
             <ImageButton
                 android:id="@+id/ivChat"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:src="@drawable/ic_baseline_backup_24" />
+                android:backgroundTint="@color/color_success"
+                android:src="@drawable/ic_baseline_chat_24"
+                android:tint="@color/white" />
 
             <ImageButton
                 android:id="@+id/ivDirection"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
+                android:layout_marginLeft="5dp"
                 android:layout_weight="1"
-                android:src="@drawable/ic_baseline_backup_24" />
+                android:backgroundTint="@color/color_info"
+                android:src="@drawable/ic_baseline_directions_24"
+                android:tint="@color/white" />
         </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
