--- a/app/src/main/res/layout/fragment_user_dashboard.xml
+++ b/app/src/main/res/layout/fragment_user_dashboard.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="15dp"
     tools:context=".fragment.dashboard.UserDashboardFragment">
 
     <LinearLayout
@@ -12,7 +11,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/imageSlider"
-        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
         android:orientation="horizontal">
 
         <EditText
@@ -38,7 +39,6 @@
         android:id="@+id/imageSlider"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:layout_marginBottom="10dp"
         app:sliderAnimationDuration="600"
         app:sliderAutoCycleDirection="back_and_forth"
         app:sliderAutoCycleEnabled="true"
@@ -59,5 +59,6 @@
         android:id="@+id/rvDashboard"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/lytSearch" />
+        android:layout_below="@id/lytSearch"
+        android:layout_margin="15dp" />
 </RelativeLayout>
