--- a/app/src/main/res/layout/item_review.xml
+++ b/app/src/main/res/layout/item_review.xml
@@ -25,9 +25,8 @@
 
             <com.mikhaellopez.circularimageview.CircularImageView
                 android:id="@+id/ivPhoto"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:visibility="gone" />
+                android:layout_width="60dp"
+                android:layout_height="60dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -44,14 +43,30 @@
                     android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                     android:textColor="@color/black" />
 
-                <TextView
-                    android:id="@+id/tvAddress"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Address" />
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/imageView3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="10dp"
+                        android:layout_weight="0"
+                        app:srcCompat="@drawable/ic_baseline_star_24"
+                        app:tint="@color/yellow" />
+
+                    <TextView
+                        android:id="@+id/tvRating"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:text="TextView" />
+                </LinearLayout>
 
                 <TextView
-                    android:id="@+id/tvPhone"
+                    android:id="@+id/tvReview"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="phone" />
