--- a/app/src/main/res/layout/item_user_dashboard.xml
+++ b/app/src/main/res/layout/item_user_dashboard.xml
@@ -27,7 +27,8 @@
                 android:id="@+id/ivPhoto"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:layout_weight="0" />
+                android:layout_weight="0"
+                android:visibility="gone" />
 
             <LinearLayout
                 android:layout_width="match_parent"
