add menu, update menu, add review, add slider, delete menu, delete slider, resto dashboard

--- a/app/src/main/res/layout/fragment_admin_dashboard.xml
+++ b/app/src/main/res/layout/fragment_admin_dashboard.xml
@@ -188,7 +188,7 @@
                     android:textColor="@color/white" />
 
                 <TextView
-                    android:id="@+id/tvToralMenus"
+                    android:id="@+id/tvTotalMenus"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="0"
