--- a/app/src/main/res/menu/popup_menu.xml
+++ b/app/src/main/res/menu/popup_menu.xml
@@ -3,8 +3,8 @@
 
     <item
         android:id="@+id/menu_edit"
-        android:title="@string/change_menu" />
+        android:title="UPDATE" />
     <item
         android:id="@+id/menu_delete"
-        android:title="@string/delete_menu" />
+        android:title="DELETE" />
 </menu>
