--- a/app/src/main/res/layout/fragment_admin_dashboard.xml
+++ b/app/src/main/res/layout/fragment_admin_dashboard.xml
@@ -54,10 +54,10 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/tvStatistic"
         android:layout_margin="15dp"
-        android:layout_marginStart="15d"
-        android:layout_marginTop="15d"
-        android:layout_marginEnd="15d"
-        android:layout_marginBottom="15d"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
         android:orientation="horizontal">
 
         <androidx.cardview.widget.CardView
@@ -129,10 +129,10 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/row1"
         android:layout_margin="15dp"
-        android:layout_marginStart="15d"
-        android:layout_marginTop="15d"
-        android:layout_marginEnd="15d"
-        android:layout_marginBottom="15d"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
         android:orientation="horizontal">
 
         <androidx.cardview.widget.CardView
