--- a/app/src/main/res/layout/item_menu.xml
+++ b/app/src/main/res/layout/item_menu.xml
@@ -71,7 +71,7 @@
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:layout_alignParentBottom="true"
-        android:background="@color/Dark_3" />
+        android:background="@color/grey" />
 
     <TextView
         android:id="@+id/tvPrice"
