--- a/app/src/main/res/layout/fragment_restaurant_menu.xml
+++ b/app/src/main/res/layout/fragment_restaurant_menu.xml
@@ -6,14 +6,6 @@
     android:padding="15dp"
     tools:context=".fragment.dashboard.resto.RestaurantMenuFragment">
 
-    <Button
-        android:id="@+id/btnAddMenu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:text="Add Menu" />
-
     <TextView
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
@@ -49,13 +41,22 @@
             android:layout_margin="5dp"
             android:layout_weight="0"
             android:text="Search" />
+
+        <Button
+            android:drawableLeft="@drawable/ic_baseline_fastfood_24"
+            android:drawableTint="@color/white"
+            android:id="@+id/btnOrder"
+            android:layout_margin="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:text="Order" />
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvMenu"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/btnAddMenu"
         android:layout_below="@id/lytSearch"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp" />
