--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -5,16 +5,20 @@
         android:icon="@drawable/ic_baseline_dashboard_24"
         android:title="Dashboard" />
 
-    <item
-        android:id="@+id/nav_all_user"
-        android:icon="@drawable/ic_baseline_people_24"
-        android:title="All Users" />
+<!--    <item-->
+<!--        android:id="@+id/nav_all_user"-->
+<!--        android:icon="@drawable/ic_baseline_people_24"-->
+<!--        android:title="All Users" />-->
+
+<!--    <item-->
+<!--        android:id="@+id/nav_all_resto"-->
+<!--        android:icon="@drawable/ic_baseline_store_24"-->
+<!--        android:title="All Restaurant" />-->
 
     <item
-        android:id="@+id/nav_all_resto"
-        android:icon="@drawable/ic_baseline_store_24"
-        android:title="All Restaurant" />
-
+        android:id="@+id/nav_all_order"
+        android:icon="@drawable/ic_baseline_fastfood_24"
+        android:title="Order" />
 
     <item
         android:id="@+id/nav_chat"
