Fixing Order From User

--- a/app/src/main/res/layout/fragment_detail_menu.xml
+++ b/app/src/main/res/layout/fragment_detail_menu.xml
@@ -109,6 +109,7 @@
                 android:paddingLeft="5dp"
                 android:paddingRight="5dp"
                 android:text="Category"
+                android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textStyle="bold" />
         </androidx.cardview.widget.CardView>
