--- a/app/src/main/res/layout/item_menu_counter.xml
+++ b/app/src/main/res/layout/item_menu_counter.xml
@@ -111,8 +111,8 @@
                 android:layout_height="@dimen/spacing_xlarge"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:clickable="true"
-                android:tint="@color/grey"
-                app:srcCompat="@drawable/ic_baseline_remove_24" />
+                app:srcCompat="@drawable/ic_baseline_remove_24"
+                app:tint="@color/grey" />
 
             <EditText
                 android:id="@+id/etTotal"
@@ -136,8 +136,8 @@
                 android:layout_height="@dimen/spacing_xlarge"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:clickable="true"
-                android:tint="@color/grey"
-                app:srcCompat="@drawable/ic_baseline_add_24" />
+                app:srcCompat="@drawable/ic_baseline_add_24"
+                app:tint="@color/grey" />
         </LinearLayout>
 
     </LinearLayout>
